--- a/journal/202303.md
+++ b/journal/202303.md
@@ -378,15 +378,15 @@ Community stats as of {date} (compared to {date}):
 
 { _Hint: Currently this is a mix of finances and governance. We may add the separate Finances section in the future._ }
 
-In March the new [treasury](https://dcrdata.decred.org/treasury) received 8,388 DCR worth ${} at March's average rate of ${}. {} DCR was spent to pay contractors, worth ${} at March's rate.
+In March the new [treasury](https://dcrdata.decred.org/treasury) received 8,388 DCR worth $174K at March's average rate of $20.69. 4,271 DCR was spent to pay contractors, worth $88K at March's rate.
 
-The [treasury spend tx]({}) had {} outputs making payments to contractors, ranging from {} DCR to {} DCR.
+A [treasury spend tx](https://explorer.dcrdata.org/tx/57c226c50632baf64aa3bb366e11c586c38689248a067b4642173a6a96fd47d0) was mined on March 13, it had 27 outputs making payments to contractors, ranging from 2.7 DCR to 1,264 DCR.
 
-At { invoice month }'s billing rate of ${} the TSpend is equivalent to ${}.
+At January's billing rate of $22.05 the TSpend is equivalent to $94K.
 
 { _Other interesting facts/stories about the legacy or new treasury._ }
 
-As of {date}, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is {n} DCR ({n} million USD at ${n.nn}).
+As of Apr 13, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 852,332 DCR (17.8 million USD at $20.90).
 
 { _High-level recap of decision-making activity and most important events._ }
 
@@ -395,7 +395,8 @@ There were 7 proposals submitted in March
 - The Decred Journal and Politeia Digest [proposal](https://proposals.decred.org/record/9e68dca) requested a budget of $40,000 and was approved with 86% Yes votes and turnout of 46%. 
 - There were 3 proposals from the Decred DEX team which were all approved. The main [proposal](https://proposals.decred.org/record/ca6b749) for client development asked for a budget of $182,000 and was approved with 94% Yes votes and 49% turnout. A [proposal](https://proposals.decred.org/record/ae7c4fe) to fund work on packaging the DEX software as a desktop app was funded with a budget of $29,000, 91% approval from 43% turnout. A [proposal](https://proposals.decred.org/record/8b1ceda) to fund development of a market maker and arbitrage bot was funded with a budget of $73,000, gaining 89% approval from the 42% of tickets that voted.
 - A [proposal](https://proposals.decred.org/record/ff64137) from Cointelegraph for $50,000 worth of content was rejected with 41% Yes votes from turnout of 51%.
-- {2 other proposals}
+- A [proposal](https://proposals.decred.org/record/a8501bc) from @jy-p to change the PoW/PoS subsidy split to 1/89 and also change the PoW algorithm to BLAKE3, removing ASIC hardware designed to mine DCR from the network, was approved with 97% support from 62% of the eligible tickets.
+- A [proposal](https://proposals.decred.org/record/609db9e) from @joegruff to develop Decrediton support for Ledger hardware at a cost of $20,500 is voting at time of going to press. 
 
 { _Check https://github.com/decredcommunity/proposals/commits/master for updates._ }
 
