Dev feedback from davecgh

--- a/journal/202303.md
+++ b/journal/202303.md
@@ -76,18 +76,18 @@ _[dcrd](https://github.com/decred/dcrd) is a full node implementation that power
 Hardening of consensus change voting code continued from [last month](202302.md#dcrd):
 
 - Enhanced startup [validation](https://github.com/decred/dcrd/pull/3068) of deployment parameters to ensure they satisfy the assumptions that the vote tallying logic rely on. For example, it checks that each vote has exactly one Abstain and one No choice, that there are no duplicate vote choices, or that choices are properly encoded in bits. This may unlock future optimizations and simplifications of code related to vote tallying.
-  - { _very optional for general understanding: (1) How validation allows to optimize vote tallying? (2) These changes are not in the consensus layer right? i.e. would blocks failing these new checks be rejected by some other code?_ }
 - Added validation to ensure consensus change vote parameters [don't use special bits](https://github.com/decred/dcrd/pull/3073) reserved for approving or disapproving the previous block.
 - Added validation to ensure that bits used by different votes in the same voting batch [do not overlap](https://github.com/decred/dcrd/pull/3077).
 - Added validation rejecting vote choices with [empty IDs](https://github.com/decred/dcrd/pull/3079) (IDs are short strings summarizing what the vote choice means, they are normally `"yes"`, `"no"` or `"abstain"`).
 - Reworked code determining consensus [vote stage and vote tallying](https://github.com/decred/dcrd/pull/3069) logic to optimize it and make it easier to reason about.
 - Changed internal representation of the winning consensus vote choice for improved readability and additional protections from [misusing](https://github.com/decred/dcrd/pull/3080) this code.
 - Reworked tests for [consensus vote processing](https://github.com/decred/dcrd/pull/3075) code to make them easier to understand, test more edge cases, and do so [more reliably](https://github.com/decred/dcrd/pull/3076).
+- Note that the above changes are not breaking the consensus between versions in any way, they add more checks that allow dcrd to fail earlier if it detects that any assumptions made by the consensus code are violated.
 
 Other changes:
 
 - Re-request blocks and transactions [sooner](https://github.com/decred/dcrd/pull/3067) if the peer which was queried for them disconnects. Instead of waiting for this data to be announced again later, it will be requested immediately from peers that are known to have it.
-- Fixed caching of other peers' [known inventory](https://github.com/decred/dcrd/pull/3074). { _was it a bug? what did it cause? did it affect any release?_ }
+- Fixed caching of other peers' [known inventory](https://github.com/decred/dcrd/pull/3074). It was a very minor bug with the potential to cause slightly higher traffic than is strictly necessary.
 - Refactoring { 3071 3072 - drop after review } and [build config](https://github.com/decred/dcrd/pull/3081) updates.
 
 
@@ -622,6 +622,6 @@ Most information from third parties is relayed directly from the source after a 
 Credits (alphabetical order):
 
 - writing, editing, publishing: { bee, bochinchero, Exitus, jz, karamble?, l1ndseymm, phoenixgreen, richardred }
-- reviews and feedback: {}
+- reviews and feedback: davecgh
 - title image: {}
 - funding: Decred stakeholders
