--- a/journal/202303.md
+++ b/journal/202303.md
@@ -362,16 +362,14 @@ Welcome the new first-time contributors:
 
 { _Interviews with contributors. Link the interview and add a fun/strong quote._ }
 
-Community stats as of {date} (compared to {date}):
+Community stats as of Apr 3 (compared to Mar 1):
 
-- [Twitter](https://twitter.com/decredproject) followers: {} (+{})
-- [Reddit](https://www.reddit.com/r/decred/) subscribers: {} (+{})
-- [Matrix](https://chat.decred.org/) #general users: {} (+{})
-- [Discord](https://discord.gg/GJ2GXfz) users: {} (+{}), verified to post: {} (+{})
-- [Telegram](https://t.me/Decred) users: {} (+{})
-- [YouTube](https://www.youtube.com/decredchannel) subscribers: {} (+{}), views: {} (+{})
-
-{ _Optional: List/link notable SM dynamics._ }
+- [Twitter](https://twitter.com/decredproject) followers: 53,189 (+125)
+- [Reddit](https://www.reddit.com/r/decred/) subscribers: 12,678 (+18)
+- [Matrix](https://chat.decred.org/) #general users: 761 (+11)
+- [Discord](https://discord.gg/GJ2GXfz) users: 1,556 (-1), verified to post: 923 (-9)
+- [Telegram](https://t.me/Decred) users: 2,619 (-137)
+- [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,630 (+0), views: 226.5K (+1.9K)
 
 
 ## Governance
