Eco add stories

--- a/journal/202303.md
+++ b/journal/202303.md
@@ -451,7 +451,15 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&sc
 
 { _Check #ecosystem room for news._ }
 
-- https://www.reddit.com/r/decred/comments/123tn1i/binance_close_isolated_margin_for_decred_and_some/
+[Metal Pay](https://metalpay.com/) has disabled DCR trading according to a [user report](https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$JvKPmPcgLw-bUW-7Tn2QFlqmRFtLQN0pPC-4Qq5u0yY?via=decred.org&via=matrix.org&via=t2bot.io). This is confirmed by their support site which no longer shows DCR in the list of [assets available for trading](https://help.metalpay.com/hc/en-us/articles/4409447985303-What-Cryptocurrencies-are-Available-for-Trading-on-Metal-Pay-). Assets supporting [deposits and withdrawals](https://help.metalpay.com/hc/en-us/articles/4409465061911-Which-Cryptocurrencies-Support-Deposit-and-Withdrawal-on-Metal-Pay-) do not include DCR either, and apparently never did. Other coins delisted in the same batch with DCR include BNB, BUSD, DGB, PAX and TUSD. In the bigger picture, Metal Pay [delisted](https://www.reddit.com/r/CryptoCurrency/comments/zlmxj3/delisting_notice_for_select_tokens_on_metal_pay/) 13 assets in December including XMR, ZEC, DASH and BSV. Since [November 2022](https://web.archive.org/web/20221207223930/https://help.metalpay.com/hc/en-us/articles/4409447985303-What-Cryptocurrencies-are-Available-for-Trading-on-Metal-Pay-) the list of tradeable assets reduced from 63 to just 15. Metal Pay first listed DCR in [April 2020](https://twitter.com/metalpaysme/status/1249745420206686208).
+
+Bittrex's [Instant Buy](https://global.bittrex.com/instant) feature did not work for DCR due to low liquidity, according to a [user report](https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$GWyVIBD5k_vDEUPxJK3QTOFqdAot8he-q4RNcxLsmqo?via=decred.org&via=matrix.org&via=t2bot.io). This did not affect limit orders.
+
+[Ledger](https://www.ledger.com/) representative came to Decred's Matrix chat room to share a [status update](https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$kwC-IMBBr92cstg707O_SlLBJEtCiOt_RmVTtE6S0dI?via=decred.org&via=matrix.org&via=t2bot.io). The summary is: Decred support in Ledger Live is broken for some users, it is taking a long time to fix, and Ledger would love to redirect affected users to third party services compatible with their devices in the situation where an integration is broken on Ledger's side. It means Ledger is excited about the effort to add direct Ledger support to [Decrediton](https://proposals.decred.org/record/609db9e).
+
+Binance [announced](https://www.reddit.com/r/decred/comments/123tn1i/binance_close_isolated_margin_for_decred_and_some/) the delisting of DCR/BTC and DCR/USDT pairs from Isolated Margin. For context, NEBL and XVG are also part of this delisting batch. Regular (Spot) DCR trading is NOT affected by this. On a related note, personal quota in the Simple Earn product has [increased](https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$Iv4uASbdiLZIMZWbVVYFqY-motmynF19DH5MYvSRgNo?via=decred.org&via=matrix.org&via=planetdecred.org) from 300 to 10,000 DCR per person. As of Mar 27, Simple Earn showed 1.67% APR (while staking DCR directly yields about 7%/year).
+
+Bittrex made a big announcement about [shutting down U.S. operations](https://twitter.com/BittrexExchange/status/1641879884682387457) due to regulatory and economic environment. Per their [timeline](https://bittrex.zendesk.com/hc/en-us/articles/10080271948701), fiat withdrawals must conclude by Apr 24 and crypto withdrawals by Apr 29 (sooner is better). Bittrex Global and its non-U.S. customers are unaffected. The move came after Bittrex was [fined](https://www.reuters.com/business/finance/crypto-exchange-bittrex-fined-53-mln-by-us-treasury-dept-2022-10-11/) in December for $29 million for violating sanctions and AML regulations. Soon after the announcement SEC hit Bittrex with a [lawsuit](https://reason.com/2023/04/19/sec-sues-crypto-exchange-bittrex-shortly-after-it-announces-its-leaving-u-s-markets/) for operating an unregistered securities exchange.
 
 { _Check https://github.com/decred/dcrweb/commits/master for added/removed services._ }
 
