--- a/journal/202303.md
+++ b/journal/202303.md
@@ -414,29 +414,29 @@ See Politeia Digest [issue 57](https://blockcommons.red/politeia-digest/issue057
 
 { _Hint: n, n.n, and n.nn tell how many decimals to keep, e.g. 100, 16.5, 8.63_ }
 
-**Hashrate**: March's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month.
+**Hashrate**: March's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~71 Ph/s and closed ~73 Ph/s, bottoming at 64 Ph/s and peaking at 83 Ph/s throughout the month.
 
-Distribution of {} Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on {date}: {PoolName n%, ...}.
+Distribution of 74 Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Apr 1: Poolin 54%, F2Pool 35%, AntPool 11%, CoinMine 0.2%.
 
 { _Hint: Fallback links for pool distribution: https://poolbay.io/crypto/54/decred , https://dcrstats.com/pow ._ }
 
-Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by {date}: {PoolName n%, ...}.
+Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Apr 3: Poolin 44%, F2Pool 43%, AntPool 9%, BTC.com 3%.
 
-**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&axis=time&visibility=true-true&mode=stepped) varied between {n}-{n} DCR, with 30-day [average](https://dcrstats.com/) at {n.n} DCR (+{n.n}).
+**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&axis=time&visibility=true-true&mode=stepped) varied between 223-254 DCR.
 
-The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&scale=linear&bin=day&axis=time) was {n.nn}-{n.nn} million DCR, meaning that {n.n}-{n.n}% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&scale=linear&bin=day&axis=time) in Proof of Stake.
+The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&scale=linear&bin=day&axis=time) was 9.64-9.83 million DCR, meaning that 64.0-65.2% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&scale=linear&bin=day&axis=time) in Proof of Stake.
 
 { _Add a recap of ticket price action if it was interesting._ }
 
-**VSP**: The [{} listed VSPs](https://decred.org/vsp/) collectively managed ~{n} (+{n}) live tickets, which was {n.n}% of the ticket pool (+{n.n}%) as of {date}.
+**VSP**: The [16 listed VSPs](https://decred.org/vsp/) collectively managed ~7,200 (-210) live tickets, which was 17.6% of the ticket pool (-0.8%) as of Apr 1.
 
-{ _Optional: mention biggest gainers_ }
+Biggest gainers in March were ubiqsmart.com (280 tickets or +155%) and dcrhive.com (+225 tickets or +25%).
 
-**Nodes**: [Decred Mapper](https://nodes.jholdstock.uk/user_agents) observed between {} and {} dcrd nodes throughout the month. Versions of {} nodes seen on {date}: v{} - {n}%, ...
+**Nodes**: [Decred Mapper](https://nodes.jholdstock.uk/user_agents) observed between 162 and 176 dcrd nodes throughout the month. Versions of 166 nodes seen on Apr 1: v1.7.5 - 36%, v1.7.1 - 21%, v1.8.0 dev builds - 13%, v1.7.2 - 13%, v1.7.0 - 8%, v1.7.4 - 4%, other - 7%.
 
-{ _Optional_ } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%. Daily [mixed volume](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between {n}-{n}K DCR.
+{ _Optional_ } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 60.5-61.1%. Daily [mixed volume](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 317-495K DCR.
 
-{ _Optional_ } Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer has seen {} nodes (+{}), {} channels (+{}) with a total capacity of {n.n} DCR (+{n.n}), as of {date}.
+{ _Optional_ } Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer has seen 175 nodes (+17), 354 channels (+49) with a total capacity of 129 DCR (+14), as of Apr 3. These stats vary depending on the LN node. For example, @karamble's node reported 175 nodes (+0), 376 channels (-9) and 135 DCR (-33) capacity on same Apr 3.
 
 { _Add any interesting analysis or events in the network._ }
 
