--- a/journal/202303.md
+++ b/journal/202303.md
@@ -412,21 +412,49 @@ See Politeia Digest [issue 57](https://blockcommons.red/politeia-digest/issue057
 
 **Hashrate**: March's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~71 Ph/s and closed ~73 Ph/s, bottoming at 64 Ph/s and peaking at 83 Ph/s throughout the month.
 
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2023-03/700/Network_Daily_Hashrate.png) { _upload_ }
+
+_Image: Decred hashrate._
+
 Distribution of 74 Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Apr 1: Poolin 54%, F2Pool 35%, AntPool 11%, CoinMine 0.2%.
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Apr 3: Poolin 44%, F2Pool 43%, AntPool 9%, BTC.com 3%.
 
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2023-03/700/Daily_Hash_Dist.png) { _upload_ }
+
+_Image: Historical pool hashrate distribution._
+
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&axis=time&visibility=true-true&mode=stepped) varied between 223-254 DCR.
 
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2023-03/700/Staking_Daily_TicketPrice_DCR.png) { _upload_ }
+
+_Image: Ticket price has stabilized._
+
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&scale=linear&bin=day&axis=time) was 9.64-9.83 million DCR, meaning that 64.0-65.2% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&scale=linear&bin=day&axis=time) in Proof of Stake.
+
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2023-03/700/Staking_Daily_TicketPoolVal_DCR.png)  { _upload_ }
+
+_Image: DCR locked in tickets keeps crawling up._
 
 **VSP**: The [16 listed VSPs](https://decred.org/vsp/) collectively managed ~7,200 (-210) live tickets, which was 17.6% of the ticket pool (-0.8%) as of Apr 1.
 
 Biggest gainers in March were ubiqsmart.com (280 tickets or +155%) and dcrhive.com (+225 tickets or +25%).
 
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2023-03/700/Voting%20Service%20Provider%20(VSP)%20-%20Live%20Ticket%20Distribution.png) { _upload_ }
+
+_Image: Distribution of tickets managed by VSPs._
+
 **Nodes**: [Decred Mapper](https://nodes.jholdstock.uk/user_agents) observed between 162 and 176 dcrd nodes throughout the month. Versions of 166 nodes seen on Apr 1: v1.7.5 - 36%, v1.7.1 - 21%, v1.8.0 dev builds - 13%, v1.7.2 - 13%, v1.7.0 - 8%, v1.7.4 - 4%, other - 7%.
 
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2023-03/700/Daily_NodeDistribution.png) { _upload_ }
+
+_Image: Historical dcrd version distribution, data from nodes.jholdstock.uk. Data until Jan 2023 was incomplete._
+
 The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 60.5-61.1%. Daily [mixed volume](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 317-495K DCR.
+
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2023-03/700/Stakeshuffle_Daily_MixedUnspent_DCR.png) { _upload_ }
+
+_Image: Mixed supply has recovered from a brief drop._
 
 Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer has seen 175 nodes (+17), 354 channels (+49) with a total capacity of 129 DCR (+14), as of Apr 3. These stats vary depending on the LN node. For example, @karamble's node reported 175 nodes (+0), 376 channels (-9) and 135 DCR (-33) capacity on same Apr 3.
 
