--- a/journal/202303.md
+++ b/journal/202303.md
@@ -385,9 +385,7 @@ Community stats as of Apr 3 (compared to Mar 1):
 
 In March the new [treasury](https://dcrdata.decred.org/treasury) received 8,388 DCR worth $174K at March's average rate of $20.69. 4,271 DCR was spent to pay contractors, worth $88K at March's rate.
 
-A [treasury spend tx](https://explorer.dcrdata.org/tx/57c226c50632baf64aa3bb366e11c586c38689248a067b4642173a6a96fd47d0) was mined on March 13, it had 27 outputs making payments to contractors, ranging from 2.7 DCR to 1,264 DCR.
-
-At January's billing rate of $22.05 the TSpend is equivalent to $94K.
+A [treasury spend tx](https://explorer.dcrdata.org/tx/57c226c50632baf64aa3bb366e11c586c38689248a067b4642173a6a96fd47d0) was mined on March 13, it had 27 outputs making payments to contractors, ranging from 2.7 DCR to 1,264 DCR. At January's billing rate of $22.05 the TSpend is equivalent to $94K.
 
 { _Other interesting facts/stories about the legacy or new treasury._ }
 
@@ -395,17 +393,21 @@ As of Apr 13, combined balance of [legacy](https://dcrdata.decred.org/address/Dc
 
 { _High-level recap of decision-making activity and most important events._ }
 
-There were 7 proposals submitted in March
+There were 7 proposals submitted in March:
 
-- The Decred Journal and Politeia Digest [proposal](https://proposals.decred.org/record/9e68dca) requested a budget of $40,000 and was approved with 86% Yes votes and turnout of 46%. 
+- The Decred Journal and Politeia Digest [proposal](https://proposals.decred.org/record/9e68dca) requested a budget of $40,000 and was approved with 86% Yes votes and turnout of 46%.
+
 - There were 3 proposals from the Decred DEX team which were all approved. The main [proposal](https://proposals.decred.org/record/ca6b749) for client development asked for a budget of $182,000 and was approved with 94% Yes votes and 49% turnout. A [proposal](https://proposals.decred.org/record/ae7c4fe) to fund work on packaging the DEX software as a desktop app was funded with a budget of $29,000, 91% approval from 43% turnout. A [proposal](https://proposals.decred.org/record/8b1ceda) to fund development of a market maker and arbitrage bot was funded with a budget of $73,000, gaining 89% approval from the 42% of tickets that voted.
+
 - A [proposal](https://proposals.decred.org/record/ff64137) from Cointelegraph for $50,000 worth of content was rejected with 41% Yes votes from turnout of 51%.
+
 - A [proposal](https://proposals.decred.org/record/a8501bc) from @jy-p to change the PoW/PoS subsidy split to 1/89 and also change the PoW algorithm to BLAKE3, removing ASIC hardware designed to mine DCR from the network, was approved with 97% support from 62% of the eligible tickets.
-- A [proposal](https://proposals.decred.org/record/609db9e) from @joegruff to develop Decrediton support for Ledger hardware at a cost of $20,500 is voting at time of going to press. 
+
+- A [proposal](https://proposals.decred.org/record/609db9e) from @joegruff to develop Decrediton support for Ledger hardware at a cost of $20,500 is voting at time of going to press.
 
 { _Check https://github.com/decredcommunity/proposals/commits/master for updates._ }
 
-See Politeia Digest [issue 57](https://blockcommons.red/politeia-digest/issue057/) and [58](https://blockcommons.red/politeia-digest/issue058/) for more details on the month's proposals.
+See Politeia Digest [issue 57](https://blockcommons.red/politeia-digest/issue057/) and [issue 58](https://blockcommons.red/politeia-digest/issue058/) for more details on the month's proposals.
 
 
 ## Network
