Gov remove vote outcomes known in Apr

--- a/journal/202303.md
+++ b/journal/202303.md
@@ -395,9 +395,9 @@ There were 7 proposals submitted in March:
 
 - A [proposal](https://proposals.decred.org/record/ff64137) from Cointelegraph for $50,000 worth of content was rejected with 41% Yes votes from turnout of 51%.
 
-- A [proposal](https://proposals.decred.org/record/a8501bc) from @jy-p to change the PoW/PoS subsidy split to 1/89 and also change the PoW algorithm to BLAKE3, removing ASIC hardware designed to mine DCR from the network, was approved with 97% support from 62% of the eligible tickets.
+- A [proposal](https://proposals.decred.org/record/a8501bc) from @jy-p to change the PoW/PoS subsidy split to 1/89 and also change the PoW algorithm to BLAKE3, removing ASIC hardware designed to mine DCR from the network.
 
-- A [proposal](https://proposals.decred.org/record/609db9e) from @joegruff to develop Decrediton support for Ledger hardware at a cost of $20,500 is voting at time of going to press.
+- A [proposal](https://proposals.decred.org/record/609db9e) from @joegruff to develop Decrediton support for Ledger hardware at a cost of $20,500.
 
 See Politeia Digest [issue 57](https://blockcommons.red/politeia-digest/issue057/) and [issue 58](https://blockcommons.red/politeia-digest/issue058/) for more details on the month's proposals.
 
