--- a/journal/202303.md
+++ b/journal/202303.md
@@ -366,8 +366,6 @@ Welcome the new first-time contributors:
 
 { _Check CMS, remove if none._ } Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}).
 
-{ _Welcome new corporate contractors with short intros._ }
-
 { _Status updates from existing contractors._ }
 
 { _Interviews with contributors. Link the interview and add a fun/strong quote._ }
@@ -389,6 +387,8 @@ In March the new [treasury](https://dcrdata.decred.org/treasury) received 8,388 
 A [treasury spend tx](https://explorer.dcrdata.org/tx/57c226c50632baf64aa3bb366e11c586c38689248a067b4642173a6a96fd47d0) was mined on March 13, it had 27 outputs making payments to contractors, ranging from 2.7 DCR to 1,264 DCR. At January's billing rate of $22.05 the TSpend is equivalent to $94K.
 
 As of Apr 13, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 852,332 DCR (17.8 million USD at $20.90).
+
+{ maybe mention treasury anniversary https://matrix.to/#/!lDZCzVQjFoJsXMPkvr:decred.org/$V6LLjKsI_Nlz7t5UTivNw3e8WN0fJysjS_Prd_lQIVw }
 
 There were 7 proposals submitted in March:
 
@@ -466,7 +466,7 @@ Bittrex's [Instant Buy](https://global.bittrex.com/instant) feature did not work
 
 Binance [announced](https://www.reddit.com/r/decred/comments/123tn1i/binance_close_isolated_margin_for_decred_and_some/) the delisting of DCR/BTC and DCR/USDT pairs from Isolated Margin. For context, NEBL and XVG are also part of this delisting batch. Regular (Spot) DCR trading is NOT affected by this. On a related note, personal quota in the Simple Earn product has [increased](https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$Iv4uASbdiLZIMZWbVVYFqY-motmynF19DH5MYvSRgNo?via=decred.org&via=matrix.org&via=planetdecred.org) from 300 to 10,000 DCR per person. As of Mar 27, Simple Earn showed 1.67% APR (while staking DCR directly yields about 7%/year).
 
-Bittrex made a big announcement about [shutting down U.S. operations](https://twitter.com/BittrexExchange/status/1641879884682387457) due to regulatory and economic environment. Per their [timeline](https://bittrex.zendesk.com/hc/en-us/articles/10080271948701), fiat withdrawals must conclude by Apr 24 and crypto withdrawals by Apr 29 (sooner is better). Bittrex Global and its non-U.S. customers are unaffected. The move came after Bittrex was [fined](https://www.reuters.com/business/finance/crypto-exchange-bittrex-fined-53-mln-by-us-treasury-dept-2022-10-11/) in December for $29 million for violating sanctions and AML regulations. Soon after the announcement SEC hit Bittrex with a [lawsuit](https://reason.com/2023/04/19/sec-sues-crypto-exchange-bittrex-shortly-after-it-announces-its-leaving-u-s-markets/) for operating an unregistered securities exchange.
+Bittrex made a big announcement about [shutting down U.S. operations](https://twitter.com/BittrexExchange/status/1641879884682387457) due to regulatory and economic challenges. Per their [timeline](https://bittrex.zendesk.com/hc/en-us/articles/10080271948701), fiat withdrawals must conclude by Apr 24 and crypto withdrawals by Apr 29 (sooner is better). Bittrex Global and its non-U.S. customers are unaffected. The move came after Bittrex was [fined](https://www.reuters.com/business/finance/crypto-exchange-bittrex-fined-53-mln-by-us-treasury-dept-2022-10-11/) in December for $29 million for violating sanctions and AML regulations. Despite closing U.S. operations Bittrex may be hit by a [lawsuit](https://reason.com/2023/04/19/sec-sues-crypto-exchange-bittrex-shortly-after-it-announces-its-leaving-u-s-markets/) from SEC for operating an unregistered securities exchange.
 
 Join our [#ecosystem](https://chat.decred.org/#/room/#ecosystem:decred.org) chat to follow Decred ecosystem updates.
 
@@ -578,8 +578,8 @@ In March DCR was trading between USDT 17.53-25.90 and BTC 0.00068-0.00102. The a
   - https://www.coindesk.com/consensus-magazine/2023/03/13/usdcs-black-swan-depegging-could-have-been-avoided-with-proper-regulatory-framework/
   - Check if other stablecoins were affected
 - https://www.bloomberg.com/news/articles/2023-03-02/uk-banks-ramp-up-crypto-restrictions-with-new-retail-limits
-- Whats up with Coinbase?
-  - https://matrix.to/#/!lDZCzVQjFoJsXMPkvr:decred.org/$v50mL-QAAoKAm3CmItKkw_Ew_tRlTnBAp-bI6AZKXA4
+- SEC threatens Coinbase
+  - https://reason.com/2023/03/23/sec-to-coinbase-nice-crypto-exchange-you-got-there-itd-be-a-shame-if-something-happened-to-it/
 - WSJ USDT piece 
   - https://archive.is/50s0q
 - JP Morgan iced Gemini
