Events add upcoming

--- a/journal/202303.md
+++ b/journal/202303.md
@@ -495,6 +495,10 @@ Secured the following media placements:
 - @arij gave a [presentation](https://decredcommunity.github.io/events/index/20230304.1) at Technopark Casablanca in a theme "Blockchain and Entrepreneurship". It started with an intro to blockchain tech use cases and its history, followed by a demo of Decrediton and Politeia. The attendees were of different backgrounds including finance, energy and IT sectors. The majority came in response to a LinkedIn announcement.
 - [Second event](https://decredcommunity.github.io/events/index/20230311.1) by the Decred Arabia team was co-organized by the sports association of Aïn Chock and the District Council of Aïn Chock Casablanca. @khalidesi presented an introduction to blockchains on day 1 and application of blockchains and the Decred example on day 2. The theme was to demonstrate how the blockchain can improve the way businesses operate and promote greater economic and social inclusion.
 
+**Upcoming**:
+
+- @elian will present the latest updates from Decred in [Monerotopia](https://monerotopia.com/) in Mexico City on May 5, 6, and 7.
+
 
 ## Media
 
