Media add media scan findings

--- a/journal/202303.md
+++ b/journal/202303.md
@@ -518,7 +518,8 @@ Secured the following media placements:
 
 **Selected articles:**
 
-- {}
+- [Decred vs Digibyte: Speed race!](https://www.decredmagazine.com/decred-vs-digibyte/)
+- [Why is Decred not EVM compatible?](https://www.decredmagazine.com/why-is-decred-not-evm-compatible/) by @BlockchainJew
 
 **Videos:**
 
@@ -527,20 +528,26 @@ Secured the following media placements:
 { _Add links to text posts on DM when available for the videos_ }
 
 - [Accounts in Decrediton - Money Evolved](https://www.decredmagazine.com/accounts-in-decrediton/) by @phoenixgreen
-- [Timestamply - Redesign for timestamping digital existence](https://www.decredmagazine.com/timestamply-redesign-for-timestamping-digital-existence/) by @phoenixgreen 
-- [DCRDEX 0.6 is coming - Multi-chain wallets, Market Maker bots, Digibyte support & More](https://www.decredmagazine.com/dcrdex-0-6-is-coming/) by @phoenixgreen
-- [Timestamply Tutorial Demonstration - Decred Time stamping](https://www.decredmagazine.com/timestamply-tutorial/) by @phoenixgreen
+- [Timestamply - Redesign for timestamping digital existence](https://www.decredmagazine.com/timestamply-redesign-for-timestamping-digital-existence/) by @phoenixgreen - also as a [text post](https://www.decredmagazine.com/timestamply-redesign-for-timestamping-digital-existence/) and as a [podcast](https://podcasters.spotify.com/decred-magazine/episodes/Timestamply---Redesign-for-timestamping-digital-existence-e204bff) on Spotify
+- [DCRDEX 0.6 is coming - Multi-chain wallets, Market Maker bots, Digibyte support & More](https://www.decredmagazine.com/dcrdex-0-6-is-coming/) by @phoenixgreen - also as a text post and as a [podcast](https://podcasters.spotify.com/pod/show/decred-magazine/episodes/DCRDEX-0-6-is-coming-e210q07) on Spotify
+- [Timestamply Tutorial Demonstration - Decred Time stamping](https://www.youtube.com/watch?v=Vw1J5nleUK8) by @phoenixgreen - also as a [text post](https://www.decredmagazine.com/timestamply-tutorial/)
 
 Livestream:
 
-- [State of the market - Content and Development Proposals for Decred Feat. Cointelegraph](https://www.decredmagazine.com/state-of-the-market-content-and-development-proposals/) by @phoenixgreen and @Exitus
+- [State of the market - Content and Development Proposals for Decred Feat. Cointelegraph](https://www.decredmagazine.com/state-of-the-market-content-and-development-proposals/) by @phoenixgreen and @Exitus - mirrored on [Spotify](https://podcasters.spotify.com/pod/show/decred-magazine/episodes/State-of-the-market---Content-and-Development-Proposals-e209gfm)
 
 **Audio:**
 
-- {}
+- [Living on Crypto - Rediscovering the Original Purpose of Crypto as Cash](https://twitter.com/i/spaces/1djGXlALNNdGZ) - @Tivra talks to [@TheDesertLynx](https://twitter.com/TheDesertLynx) who has been living on crypto since 2016. "If you're tired of trad banking and wanna break free, this is for you". Mirrored on [Spotify](https://podcasters.spotify.com/decred-magazine/episodes/Living-on-Crypto--Rediscovering-the-Original-Purpose-of-Crypto-as-Cash-e205aup).
 
 **Art and fun:**
 
+- [Bison Relay rewards](https://twitter.com/karamblez/status/1631583670732480514) animation by @karamble
+- [Do you even timestamp your existence?](https://twitter.com/karamblez/status/1632551305469128704) animation by @karamble
+- [Decred DEX - There's a better way](https://www.youtube.com/shorts/CpwiihYotbI) by @buck54321
+- [The Future will not be centralised](https://www.decredmagazine.com/the-future-will-not-be-centralised/) by @OfficialCryptos
+- [Decred Pepe crushing miners](https://twitter.com/karamblez/status/1640492718211182592) by @karamble
+- [What the heck did you just say about Decred?](https://www.youtube.com/watch?v=WRL-ISUme0I) by Laboratory for Memetic Experimentation
 - [TikTok on Cointelegraph Proposal](https://twitter.com/exitusdcr/status/1641796401725337602) by @DajanaDcr
 
 
@@ -559,7 +566,7 @@ Livestream:
 
 **Other:**
 
-- { _e.g. educational posts and anything that doesn't fall in other categories_ }
+- @decredmagazine made 3 new [TikTok videos](https://www.tiktok.com/@decredmagazine)
 
 
 ## Markets
