--- a/journal/202303.md
+++ b/journal/202303.md
@@ -594,29 +594,29 @@ _Image: DCRDEX monthly volume in USD._
 
 }
 
-Three US banks failed in March, the largest of them being [Silicon Valley Bank](https://www.nytimes.com/2023/03/10/business/silicon-valley-bank-stock.html) (SVB), which was the second largest US bank failure of all time. One of the ripple effects was a temporary [de-pegging](https://www.coindesk.com/markets/2023/03/11/usdc-stablecoin-depegs-from-1-circle-says-operations-are-normal/) of the USDC stablecoin as news emerged that ~10% of the funds backing USDC were stuck with SVB when the FDIC stepped in to take over  before Circle's withdrawal was processed. 
+Three US banks failed in March, the largest of them being [Silicon Valley Bank](https://www.nytimes.com/2023/03/10/business/silicon-valley-bank-stock.html) (SVB), which was the second largest US bank failure of all time. One of the ripple effects was a temporary [de-pegging](https://www.coindesk.com/markets/2023/03/11/usdc-stablecoin-depegs-from-1-circle-says-operations-are-normal/) of the USDC stablecoin as news emerged that ~10% of the funds backing USDC were stuck with SVB when the FDIC stepped in to take over before Circle's withdrawal was processed.
 
 Binance has been [charged](https://decrypt.co/124800/binance-cftc-lawsuit-crypto) by the CFTC in a wide ranging complaint which covers a number of offences, including weak KYC/AML that allowed US customers to trade derivatives and securities which they were not registered to offer, allowed money laundering to occur, and traded against their own customers. The 74 page [complaint](https://www.docdroid.net/60YAbCz/cftc-binance-pdf) includes quotes from messages sent between internal staff, including such gems as "I HAZ NO CONFIDENCE IN OUR GEOFENCING", from the money laundering reporting officer. The complaint also mentions Bitcoin and Ethereum as commodities, in service to defining Binance's activities as subject to CFTC's jurisdiction.
 
 Justin Sun and his companies Tron Foundation, BitTorrent Foundation and Rainberry have been [sued](https://www.sec.gov/news/press-release/2023-59) by the SEC for violations including sale of unregistered securities (TRX and BTT) and manipulating the secondary market for TRX through extensive wash trading. A number of celebrities who were engaged to promote Sun's projects have also been sued in the same motion for promoting TRX/BTT without disclosing the arrangement, they include Lindsey Lohan, Jake Paul, Soulja Boy, and Lil Yachty. The period for which Sun is accused of wash trading covers April 2018 to February 2019, during which time Sun allegedly provided between 4.5 million and 7.4 million TRX and instructed staff to wash trade it using two of his accounts.
 
-Do Kwon, of Terra/Luna infamy, was [arrested](https://www.coindesk.com/business/2023/03/23/do-kwon-arrested-in-montenegro-interior-minister/) in Montenegro for using forged documents. Both the US and South Korea have[announced](https://www.coindesk.com/consensus-magazine/2023/03/29/the-questions-that-linger-after-do-kwons-arrest/) their wish to extradite and prosecute him.
+Do Kwon, of Terra/Luna infamy, was [arrested](https://www.coindesk.com/business/2023/03/23/do-kwon-arrested-in-montenegro-interior-minister/) in Montenegro for using forged documents. Both the US and South Korea have [announced](https://www.coindesk.com/consensus-magazine/2023/03/29/the-questions-that-linger-after-do-kwons-arrest/) their wish to extradite and prosecute him.
 
-The second Retroactive Public Goods Funding (RetroPGF) initiative by Optimism was [completed](https://optimism.mirror.xyz/Upn_LtV2-3SviXgX_PE_LyA7YI00jQyoM1yf55ltvvI) in March, with 10 million OP being distributed to 195 different projects and people that had contributed something to the Optimism or Ethereum ecosystem. The funds were distributed to recipients in three different sections, Infrastructure (received 37%), Tooling & Utilities (32%) and Education (31%). To decide how the OP would be distributed, a panel of 90 community members was [formed](https://community.optimism.io/docs/governance/retropgf-2/#voting-badge-distribution) by selecting community members using a variety of different means. Each "badgeholder"  ranked the nominated projects and funds were dispersed according to a weighted average of their votes.
+The second Retroactive Public Goods Funding (RetroPGF) initiative by Optimism was [completed](https://optimism.mirror.xyz/Upn_LtV2-3SviXgX_PE_LyA7YI00jQyoM1yf55ltvvI) in March, with 10 million OP being distributed to 195 different projects and people that had contributed something to the Optimism or Ethereum ecosystem. The funds were distributed to recipients in three different sections, Infrastructure (received 37%), Tooling & Utilities (32%) and Education (31%). To decide how the OP would be distributed, a panel of 90 community members was [formed](https://community.optimism.io/docs/governance/retropgf-2/#voting-badge-distribution) by selecting community members using a variety of different means. Each "badgeholder" ranked the nominated projects and funds were dispersed according to a weighted average of their votes.
 
 Arbitrum, an Ethereum Layer 2, conducted its long-anticipated airdrop, and there has been controversy about how well anticipated the conditions were by airdrop hunters. [Analysis](https://mirror.xyz/x-explore.eth/AFroG11e24I6S1oDvTitNdQSDh8lN5bz9VZAink8lZ4) of the airdrop indicated that, despite rules to avoid giving airdrops to Sybil users, as much as 48% of the airdropped tokens went to an address that was strongly associated with at least one other address which also received the airdrop - with 22% going to advanced Sybil users who had thousands of associated addresses receiving the airdrop.
 
-Once the tokens were airdropped their holders (those who didn't dump immediately) became Arbitrum's governance decision-makers. The first proposal (AIP-1) they would decide on would allocate 750 Million ARB tokens to the Arbitrum Foundation, and it turned [messy](https://www.coindesk.com/business/2023/04/01/arbitrums-first-governance-proposal-turns-messy-with-1b-arb-tokens-at-stake/). Community members objected to the Foundation having discretion to spend some of these funds without on chain community approval, and when it was clear that the proposal was in difficulty the Foundation published a [blog post](https://forum.arbitrum.foundation/t/clarity-around-the-ratification-of-aip-1/12864) explaining that the vote was to ratify something that was already happening, the Foundation already had the funds and had in fact started spending them. This appears to have been a miscommunication about the nature of the vote, but following the controversy which erupted the Foundation has taken steps to reassure the community that the remaining 700 million ARB will not be touched until a proposal has been approved by the community.
+Once the tokens were airdropped their holders (those who didn't dump immediately) became Arbitrum's governance decision-makers. In the first proposal (AIP-1) they would decide on whether to allocate 750 million ARB (worth $1 billion) tokens to the Arbitrum Foundation, and it turned [messy](https://www.coindesk.com/business/2023/04/01/arbitrums-first-governance-proposal-turns-messy-with-1b-arb-tokens-at-stake/). Community members objected to the Foundation having discretion to spend some of these funds without on-chain community approval, and when it was clear that the proposal was in difficulty the Foundation published a [blog post](https://forum.arbitrum.foundation/t/clarity-around-the-ratification-of-aip-1/12864) explaining that the vote was to ratify something that was already happening, the Foundation already had the funds and had in fact started spending them. This appears to have been a miscommunication about the nature of the vote, but following the controversy which erupted the Foundation has taken steps to reassure the community that the remaining 700 million ARB will not be touched until a proposal has been approved by the community.
 
-This month's record breaking DeFi hack is a good news story, because it's the largest ever [recovery](https://twitter.com/eulerfinance/status/1643345907344379904) of funds, by the Euler Labs team. The Euler Finance protocol was [exploited](https://cointelegraph.com/news/euler-labs-hacker-returns-all-of-the-recoverable-funds-timeline) by a flash loan attack on March 13, the attacker was able to obtain $197 Million, and causing the value locked in Euler contracts to drop as low as $10 million. Euler Labs tried to negotiate the return of 90% of the funds with the hacker and when the negotiations broke down put out a $1 Million bounty for information about the attacker. Although a deal could not be reached the attacker began to sporadically return the funds, until eventually on April 4 Euler Labs announced that all the "recoverable funds" had been returned and the bounty was cancelled.
+This month's record breaking DeFi hack is a good news story, because it's the largest ever [recovery](https://twitter.com/eulerfinance/status/1643345907344379904) of funds, by the Euler Labs team. The Euler Finance protocol was [exploited](https://cointelegraph.com/news/euler-labs-hacker-returns-all-of-the-recoverable-funds-timeline) by a flash loan attack on March 13, the attacker was able to obtain $197 million, and causing the value locked in Euler contracts to drop as low as $10 million. Euler Labs tried to negotiate the return of 90% of the funds with the hacker and when the negotiations broke down put out a $1 million bounty for information about the attacker. Although a deal could not be reached the attacker began to sporadically return the funds, until eventually on April 4 Euler Labs announced that all the "recoverable funds" had been returned and the bounty was cancelled.
 
-LinksDAO is seemingly on course to [achieve](https://twitter.com/LinksDAO/status/1636433901232222208) its main objective and buy a Links Golf Club, specifically Spey Bay on the Moray Coast of Scotland. The Club was listed for $905,000 and LinksDAO's representatives were the top bidders, with the sale to be confirmed and the final sale price as yet unknown. LinksDAO is still [reported](https://www.golfdigest.com/story/links-golf-club-buys-spey-bay-golf-links) to be on the lookout for US golf properties, as presumably not many of its 5,400 global members have easy access to the Moray Coast to play a round. 
+LinksDAO is seemingly on course to [achieve](https://twitter.com/LinksDAO/status/1636433901232222208) its main objective and buy a Links Golf Club, specifically Spey Bay on the Moray Coast of Scotland. The Club was listed for $905,000 and LinksDAO's representatives were the top bidders, with the sale to be confirmed and the final sale price as yet unknown. LinksDAO is still [reported](https://www.golfdigest.com/story/links-golf-club-buys-spey-bay-golf-links) to be on the lookout for US golf properties, as presumably not many of its 5,400 global members have easy access to the Moray Coast to play a round.
 
-The "Skull of Satoshi", an art installation commissioned by Greenpeace as part of a campaign to highlight the impact of PoW mining, has been [adopted](https://decrypt.co/124622/skull-satoshi-artist-says-was-wrong-bitcoin-mining) by the Bitcoin community as its own. The artist has come to the realisation that it is not a black and white issue, as they thought it was when they began creating the piece.
+The "Skull of Satoshi", an art installation commissioned by Greenpeace as part of a campaign to highlight the impact of PoW mining, has been [adopted](https://decrypt.co/124622/skull-satoshi-artist-says-was-wrong-bitcoin-mining) by the Bitcoin community as its own. The artist has come to the realization that it is not a black and white issue, as they thought it was when they began creating the piece.
 
 Ron DeSantis, Governor of Florida, has [proposed](https://www.coindesk.com/policy/2023/03/20/florida-governor-ron-desantis-proposes-law-to-ban-cbdcs/) legislation to ban the acceptance of Central Bank Digital Currency (CBDC) in the state. [Doubts](https://www.coindesk.com/consensus-magazine/2023/03/22/cbdc-desantis-ban-digitaldollar/) have been raised whether the legislation is workable, it is likely that a Federal push for a CBDC could overturn pre-existing state law.
 
-Nigeria has been pushing its CBDC, when [incentives](https://www.coindesk.com/consensus-magazine/2023/03/06/nigerians-rejection-of-their-cbdc-is-a-cautionary-tale-for-other-countries/) like discounts on taxi fares didn't work to increase adoption they restricted access to cash to force the issue, but not people are protesting about the lack of cash and still adoption of the CBDC is at less than 0.5% of the population. 
+Nigeria has been pushing its CBDC, when [incentives](https://www.coindesk.com/consensus-magazine/2023/03/06/nigerians-rejection-of-their-cbdc-is-a-cautionary-tale-for-other-countries/) like discounts on taxi fares didn't work to increase adoption they restricted access to cash to force the issue, but not people are protesting about the lack of cash and still adoption of the CBDC is at less than 0.5% of the population.
 
 { _Hint: Besides dramatic "epic fails", try to also report some "epic wins" in areas relevant to Decred. We can learn from both._ }
 
@@ -644,5 +644,5 @@ Credits (alphabetical order):
 
 - writing, editing, publishing: { bee, bochinchero, Exitus, jz, karamble?, l1ndseymm, phoenixgreen, richardred }
 - reviews and feedback: davecgh
-- title image: {}
+- title image: { Exitus }
 - funding: Decred stakeholders
