--- a/journal/202303.md
+++ b/journal/202303.md
@@ -587,16 +587,15 @@ _Image: DCRDEX monthly volume in USD._
   - https://archive.is/50s0q
 - JP Morgan iced Gemini
   - https://matrix.to/#/!lDZCzVQjFoJsXMPkvr:decred.org/$rkNEM8oMecKe8NTM2_kPoIvxle0FtNgCJxn22Jq06oI
--  Did CFTC sue Binance recently?
-  - https://proposals.decred.org/record/a8501bc/comments/50
-  - https://twitter.com/adamscochran/status/1640378686397448192
-  - https://matrix.to/#/!lDZCzVQjFoJsXMPkvr:decred.org/$euD_BODs44NN0vc6cx_eR6B58ElRLfbXWXdwF5ESPOo
+- SVB extras
+  - SVB https://www.decredmagazine.com/2008-and-2023-what-can-we-learn/
+  - SVB https://www.decredmagazine.com/is-this-the-start-of-a-new-banking-crisis/
 
 }
 
 Three US banks failed in March, the largest of them being [Silicon Valley Bank](https://www.nytimes.com/2023/03/10/business/silicon-valley-bank-stock.html) (SVB), which was the second largest US bank failure of all time. One of the ripple effects was a temporary [de-pegging](https://www.coindesk.com/markets/2023/03/11/usdc-stablecoin-depegs-from-1-circle-says-operations-are-normal/) of the USDC stablecoin as news emerged that ~10% of the funds backing USDC were stuck with SVB when the FDIC stepped in to take over before Circle's withdrawal was processed.
 
-Binance has been [charged](https://decrypt.co/124800/binance-cftc-lawsuit-crypto) by the CFTC in a wide ranging complaint which covers a number of offences, including weak KYC/AML that allowed US customers to trade derivatives and securities which they were not registered to offer, allowed money laundering to occur, and traded against their own customers. The 74 page [complaint](https://www.docdroid.net/60YAbCz/cftc-binance-pdf) includes quotes from messages sent between internal staff, including such gems as "I HAZ NO CONFIDENCE IN OUR GEOFENCING", from the money laundering reporting officer. The complaint also mentions Bitcoin and Ethereum as commodities, in service to defining Binance's activities as subject to CFTC's jurisdiction.
+Binance has been [charged](https://decrypt.co/124800/binance-cftc-lawsuit-crypto) by the CFTC in a wide ranging complaint which covers a number of offences, including weak KYC/AML that allowed US customers to trade derivatives and securities which they were not registered to offer, allowed money laundering to occur, and traded against their own customers. The 74 page [complaint](https://www.docdroid.net/60YAbCz/cftc-binance-pdf) includes quotes from messages sent between internal staff, including such gems as "I HAZ NO CONFIDENCE IN OUR GEOFENCING", from the money laundering reporting officer. The complaint also mentions Bitcoin and Ethereum as commodities, in service to defining Binance's activities as subject to CFTC's jurisdiction. CZ [reacted](https://twitter.com/cz_binance/status/1640372505046052866) with "4" [meaning](https://twitter.com/cz_binance/status/1610018096122851328) "Ignore FUD", and later with a longer [response](https://www.binance.com/en/blog/from-cz/czs-response-to-the-cftc-complaint-2408916493005890282) which recaps how much Binance has [invested](https://decrypt.co/124683/binance-cftc-lawsuit-response) in compliance and cooperation with regulators. Some analysts are [pessimistic](https://twitter.com/adamscochran/status/1640378686397448192) on Binance's chances against CFTC.
 
 Justin Sun and his companies Tron Foundation, BitTorrent Foundation and Rainberry have been [sued](https://www.sec.gov/news/press-release/2023-59) by the SEC for violations including sale of unregistered securities (TRX and BTT) and manipulating the secondary market for TRX through extensive wash trading. A number of celebrities who were engaged to promote Sun's projects have also been sued in the same motion for promoting TRX/BTT without disclosing the arrangement, they include Lindsey Lohan, Jake Paul, Soulja Boy, and Lil Yachty. The period for which Sun is accused of wash trading covers April 2018 to February 2019, during which time Sun allegedly provided between 4.5 million and 7.4 million TRX and instructed staff to wash trade it using two of his accounts.
 
